# hyperion

./: .gitignore  Cargo.toml  README.md
examples/: bench_runner.rs  query_example.rs
src/: bench.rs  entity.rs  errors.rs  index.rs  index_batcher.rs  lib.rs  main.rs  path.rs  persistent_entity.rs  persistent_store.rs  store.rs  value.rs  wildcard_index.rs
src/core/: entity.rs  errors.rs  index.rs  mod.rs  store.rs  value.rs
src/core/index/: mod.rs  prefix_index.rs  types.rs  value_index.rs  wildcard_index.rs  worker.rs
src/ql/: ast.rs  evaluator.rs  executor.rs  grammar.pest  mod.rs  parser.rs
src/server/: mod.rs  routes.rs
src/storage/: memory.rs  mod.rs  persistent.rs
trash/: index.rs
