[package]
name = "hyperion"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror="1.0"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
bincode = "1.3"    # Pour encoder/décoder en binaire
sled = "0.34"      # Pour la persistance des données

[dev-dependencies]
tempfile = "3.3"   # Pour les tests temporaires