[package]
name = "hyperion"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror="1.0"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
bincode = "1.3"    
sled = "0.34"      
pest = "2.7"
pest_derive = "2.7"
chrono = "0.4"  
uuid = { version = "1.4", features = ["v4"] }  
clap = { version = "4.4", features = ["derive"] }
base64 = "0.21"
rustyline = "12.0"
colored = "2.0"
prettytable-rs = "0.10"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.44.2", features = ["rt", "sync", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.3"   

[[bin]]
name = "hyperion-cli"
path = "src/bin/hyperion_cli/main.rs"

[[example]]
name = "bench_runner"
path = "examples/bench_runner.rs"

[[example]]
name = "query"
path = "examples/query_example.rs"
